--- a/index.html
+++ b/index.html
@@ -44,10 +44,13 @@
                   >Inicio</a
                 >
               </li>
-              <li class="nav-item dropdown"></li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Contactos</a>
+                <a class="nav-link" href="./pages/administrador.html">Administrador</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./pages/error404.html">Contactos</a>
+              </li>
+              
             </ul>
           </div>
         </div>
