puedo usar la clase contacto en admin js

--- a/pages/administrador.html
+++ b/pages/administrador.html
@@ -15,7 +15,7 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="../css/style.css" />
     <title>Agenda</title>
   </head>
   <body>
@@ -43,7 +43,7 @@
                 <a
                   class="nav-link active"
                   aria-current="page"
-                  href="./pages/administrador.html"
+                  href="./administrador.html"
                   >Administrador</a
                 >
               </li>
@@ -196,6 +196,6 @@
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
-    <script src="../js/admin.js"></script>
+    <script src="../js/admin.js" type="module"></script>
   </body>
 </html>
