--- a/pages/administrador.html
+++ b/pages/administrador.html
@@ -15,6 +15,10 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
+    />
     <link rel="stylesheet" href="../css/style.css" />
     <title>Agenda</title>
   </head>
@@ -88,9 +92,9 @@
                 <td>rosario@mail.com</td>
                 <td>381555666</td>
                 <td>
-                  <button class="btn btn-warning">Editar</button>
-                  <button class="btn btn-danger">Borrar</button>
-                  <button class="btn btn-info">Ver</button>
+                  <a class="btn btn-warning"><i class="bi bi-pencil-square"></i>Editar</a>
+                  <a class="btn btn-danger"><i class="bi bi-trash"></i>Borrar</a>
+                  <a class="btn btn-info"><i class="bi bi-eye-fill"></i>Ver</a>
                 </td>
               </tr>
               <tr>
@@ -100,9 +104,9 @@
                 <td>rosario@mail.com</td>
                 <td>381555666</td>
                 <td>
-                  <button class="btn btn-warning">Editar</button>
-                  <button class="btn btn-danger">Borrar</button>
-                  <button class="btn btn-info">Ver</button>
+                   <a class="btn btn-warning"><i class="bi bi-pencil-square"></i>Editar</a>
+                  <a class="btn btn-danger"><i class="bi bi-trash"></i>Borrar</a>
+                  <a class="btn btn-info"><i class="bi bi-eye-fill"></i>Ver</a>
                 </td>
               </tr>
               <tr>
@@ -112,9 +116,9 @@
                 <td>rosario@mail.com</td>
                 <td>381555666</td>
                 <td>
-                  <button class="btn btn-warning">Editar</button>
-                  <button class="btn btn-danger">Borrar</button>
-                  <button class="btn btn-info">Ver</button>
+                  <a class="btn btn-warning"><i class="bi bi-pencil-square"></i>Editar</a>
+                  <a class="btn btn-danger"><i class="bi bi-trash"></i>Borrar</a>
+                  <a class="btn btn-info"><i class="bi bi-eye-fill"></i>Ver</a>
                 </td>
               </tr>
               <tr>
@@ -124,9 +128,9 @@
                 <td>rosario@mail.com</td>
                 <td>381555666</td>
                 <td>
-                  <button class="btn btn-warning">Editar</button>
-                  <button class="btn btn-danger">Borrar</button>
-                  <button class="btn btn-info">Ver</button>
+                  <a class="btn btn-warning"><i class="bi bi-pencil-square"></i>Editar</a>
+                  <a class="btn btn-danger"><i class="bi bi-trash"></i>Borrar</a>
+                  <a class="btn btn-info"><i class="bi bi-eye-fill"></i>Ver</a>
                 </td>
               </tr>
             </tbody>
