abrimos la ventana modal de registro de contacto desde admin.js

--- a/pages/administrador.html
+++ b/pages/administrador.html
@@ -66,8 +66,6 @@
           <h2>Lista de Contactos</h2>
           <button
             class="btn btn-primary"
-            data-bs-toggle="modal"
-            data-bs-target="#modalContacto"
           >
             Agregar Contactos
           </button>
@@ -92,9 +90,9 @@
                 <td>rosario@mail.com</td>
                 <td>381555666</td>
                 <td>
-                  <a class="btn btn-warning"><i class="bi bi-pencil-square"></i>Editar</a>
-                  <a class="btn btn-danger"><i class="bi bi-trash"></i>Borrar</a>
-                  <a class="btn btn-info"><i class="bi bi-eye-fill"></i>Ver</a>
+                  <button class="btn btn-warning"><i class="bi bi-pencil-square"></i>Editar</button>
+                  <button class="btn btn-danger"><i class="bi bi-trash"></i>Borrar</button>
+                  <button class="btn btn-info"><i class="bi bi-eye-fill"></i>Ver</button>
                 </td>
               </tr>
               <tr>
@@ -104,9 +102,9 @@
                 <td>rosario@mail.com</td>
                 <td>381555666</td>
                 <td>
-                   <a class="btn btn-warning"><i class="bi bi-pencil-square"></i>Editar</a>
-                  <a class="btn btn-danger"><i class="bi bi-trash"></i>Borrar</a>
-                  <a class="btn btn-info"><i class="bi bi-eye-fill"></i>Ver</a>
+                   <button class="btn btn-warning"><i class="bi bi-pencil-square"></i>Editar</button>
+                  <button class="btn btn-danger"><i class="bi bi-trash"></i>Borrar</button>
+                  <button class="btn btn-info"><i class="bi bi-eye-fill"></i>Ver</button>
                 </td>
               </tr>
               <tr>
@@ -116,9 +114,9 @@
                 <td>rosario@mail.com</td>
                 <td>381555666</td>
                 <td>
-                  <a class="btn btn-warning"><i class="bi bi-pencil-square"></i>Editar</a>
-                  <a class="btn btn-danger"><i class="bi bi-trash"></i>Borrar</a>
-                  <a class="btn btn-info"><i class="bi bi-eye-fill"></i>Ver</a>
+                  <button class="btn btn-warning"><i class="bi bi-pencil-square"></i>Editar</button>
+                  <button class="btn btn-danger"><i class="bi bi-trash"></i>Borrar</button>
+                  <button class="btn btn-info"><i class="bi bi-eye-fill"></i>Ver</button>
                 </td>
               </tr>
               <tr>
@@ -128,9 +126,9 @@
                 <td>rosario@mail.com</td>
                 <td>381555666</td>
                 <td>
-                  <a class="btn btn-warning"><i class="bi bi-pencil-square"></i>Editar</a>
-                  <a class="btn btn-danger"><i class="bi bi-trash"></i>Borrar</a>
-                  <a class="btn btn-info"><i class="bi bi-eye-fill"></i>Ver</a>
+                  <button class="btn btn-warning"><i class="bi bi-pencil-square"></i>Editar</button>
+                  <button class="btn btn-danger"><i class="bi bi-trash"></i>Borrar</button>
+                  <button class="btn btn-info"><i class="bi bi-eye-fill"></i>Ver</button>
                 </td>
               </tr>
             </tbody>
