creo un contacto que se agrega a la listaContacto y limpia el formulario

--- a/pages/administrador.html
+++ b/pages/administrador.html
@@ -64,11 +64,7 @@
       <section>
         <div class="d-flex justify-content-between">
           <h2>Lista de Contactos</h2>
-          <button
-            class="btn btn-primary"
-          >
-            Agregar Contactos
-          </button>
+          <button class="btn btn-primary">Agregar Contactos</button>
         </div>
         <div class="table-responsive mt-4">
           <table class="table table-striped">
@@ -90,9 +86,15 @@
                 <td>rosario@mail.com</td>
                 <td>381555666</td>
                 <td>
-                  <button class="btn btn-warning"><i class="bi bi-pencil-square"></i>Editar</button>
-                  <button class="btn btn-danger"><i class="bi bi-trash"></i>Borrar</button>
-                  <button class="btn btn-info"><i class="bi bi-eye-fill"></i>Ver</button>
+                  <button class="btn btn-warning">
+                    <i class="bi bi-pencil-square"></i>Editar
+                  </button>
+                  <button class="btn btn-danger">
+                    <i class="bi bi-trash"></i>Borrar
+                  </button>
+                  <button class="btn btn-info">
+                    <i class="bi bi-eye-fill"></i>Ver
+                  </button>
                 </td>
               </tr>
               <tr>
@@ -102,9 +104,15 @@
                 <td>rosario@mail.com</td>
                 <td>381555666</td>
                 <td>
-                   <button class="btn btn-warning"><i class="bi bi-pencil-square"></i>Editar</button>
-                  <button class="btn btn-danger"><i class="bi bi-trash"></i>Borrar</button>
-                  <button class="btn btn-info"><i class="bi bi-eye-fill"></i>Ver</button>
+                  <button class="btn btn-warning">
+                    <i class="bi bi-pencil-square"></i>Editar
+                  </button>
+                  <button class="btn btn-danger">
+                    <i class="bi bi-trash"></i>Borrar
+                  </button>
+                  <button class="btn btn-info">
+                    <i class="bi bi-eye-fill"></i>Ver
+                  </button>
                 </td>
               </tr>
               <tr>
@@ -114,9 +122,15 @@
                 <td>rosario@mail.com</td>
                 <td>381555666</td>
                 <td>
-                  <button class="btn btn-warning"><i class="bi bi-pencil-square"></i>Editar</button>
-                  <button class="btn btn-danger"><i class="bi bi-trash"></i>Borrar</button>
-                  <button class="btn btn-info"><i class="bi bi-eye-fill"></i>Ver</button>
+                  <button class="btn btn-warning">
+                    <i class="bi bi-pencil-square"></i>Editar
+                  </button>
+                  <button class="btn btn-danger">
+                    <i class="bi bi-trash"></i>Borrar
+                  </button>
+                  <button class="btn btn-info">
+                    <i class="bi bi-eye-fill"></i>Ver
+                  </button>
                 </td>
               </tr>
               <tr>
@@ -126,9 +140,15 @@
                 <td>rosario@mail.com</td>
                 <td>381555666</td>
                 <td>
-                  <button class="btn btn-warning"><i class="bi bi-pencil-square"></i>Editar</button>
-                  <button class="btn btn-danger"><i class="bi bi-trash"></i>Borrar</button>
-                  <button class="btn btn-info"><i class="bi bi-eye-fill"></i>Ver</button>
+                  <button class="btn btn-warning">
+                    <i class="bi bi-pencil-square"></i>Editar
+                  </button>
+                  <button class="btn btn-danger">
+                    <i class="bi bi-trash"></i>Borrar
+                  </button>
+                  <button class="btn btn-info">
+                    <i class="bi bi-eye-fill"></i>Ver
+                  </button>
                 </td>
               </tr>
             </tbody>
@@ -185,8 +205,8 @@
                   <label for="direccion" class="form-label">Direccion</label>
                   <input id="direccion" type="text" class="form-control" />
                 </div>
+                <button class="btn btn-primary" type="submit">Enviar</button>
               </form>
-              <button class="btn btn-primary" type="submit">Enviar</button>
             </div>
           </div>
         </div>
