--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
+    />
     <link rel="stylesheet" href="./css/style.css" />
     <title>Agenda</title>
   </head>
@@ -58,8 +62,14 @@
     </header>
     <main class="container my-5">
       <h1 class="text-center">Pagina Principal</h1>
+      <section class="row container">
+        
+      </section>
     </main>
-    <footer></footer>
+    <footer class="bg-secondary text-center text-info">
+      &copy;Derechos Reservados -Brito Augusto-
+
+    </footer>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
