--- a/pages/administrador.html
+++ b/pages/administrador.html
@@ -19,6 +19,10 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/sweetalert2@11.12.4/dist/sweetalert2.min.css"
+    />
     <link rel="stylesheet" href="../css/style.css" />
     <title>Agenda</title>
   </head>
@@ -78,9 +82,7 @@
                 <th>Acciones</th>
               </tr>
             </thead>
-            <tbody>
-             
-            </tbody>
+            <tbody></tbody>
           </table>
         </div>
       </section>
@@ -141,15 +143,15 @@
         </div>
       </div>
     </main>
-     <footer class="bg-secondary text-center text-info">
+    <footer class="bg-secondary text-center text-info">
       &copy;Derechos Reservados -Brito Augusto-
-
     </footer>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.12.4/dist/sweetalert2.all.min.js"></script>
     <script src="../js/admin.js" type="module"></script>
   </body>
 </html>
