se agrego una funcion para dibujar una card en la pagina de detalleContacto  con la id del contacto obtenido

--- a/pages/detalleContacto.html
+++ b/pages/detalleContacto.html
@@ -44,7 +44,7 @@
                 <a
                   class="nav-link active"
                   aria-current="page"
-                  href="./index.html"
+                  href="../index.html"
                   >Inicio</a
                 >
               </li>
@@ -64,23 +64,8 @@
     <main class="container my-5">
       <h1 class="text-center mb-4">Detalle Contacto</h1>
       <div class="card mb-3">
-  <div class="row g-0">
-    <div class="col-md-4">
-      <img src="https://tse1.mm.bing.net/th?id=OIP.akzAmqBSwxJy3CckGaWSygHaHa&pid=Api&P=0&h=180" class="img-fluid rounded-start card-img-top" alt="nombre personaje">
-    </div>
-    <div class="col-md-8">
-      <div class="card-body">
-        <h5 class="card-title">Nombre y Apellido Contacto</h5>
-        <ul class="list-unstyled">
-            <li>Apodo:</li>
-            <li>Celular:</li>
-            <li>Email:</li>
-            <li>Direccion:</li>
-        </ul>
+        <div class="row g-0"></div>
       </div>
-    </div>
-  </div>
-</div>
     </main>
     <footer class="bg-secondary text-center text-info">
       &copy;Derechos Reservados -Brito Augusto-
@@ -90,6 +75,6 @@
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
-    <script src=""></script>
+    <script src="../js/verContacto.js"></script>
   </body>
 </html>
